--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Life Force Heal</title>
   <meta name="description" content="Gentle, practical healing to help you release tension, restore balance, and move forward with clarity.">
-  <link rel="icon" href="assets/lfh-logo.svg">
+  <link rel="icon" href="lfh-logo.svg">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="site-header container">
     <div class="brand">
-      <img src="assets/lfh-logo.svg" alt="Life Force Heal logo" class="logo" width="56" height="56">
+      <img src="lfh-logo.svg" alt="Life Force Heal logo" class="logo" width="56" height="56">
       <div>
         <h1>Life Force Heal</h1>
         <p class="tag">Rise • Release • Breathe</p>
