--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Life Force Heal</title>
-  <meta name="description" content="Gentle, practical healing to help you release tension, restore balance, and move forward with clarity.">
+  <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="lfh-logo.svg">
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="site-header container">
+  <header class="header">
     <div class="brand">
-      <img src="lfh-logo.svg" alt="Life Force Heal logo" class="logo" width="56" height="56">
+      <img src="lfh-logo.svg" alt="Life Force Heal logo" class="logo" width="64" height="64">
       <div>
         <h1>Life Force Heal</h1>
-        <p class="tag">Rise • Release • Breathe</p>
+        <p>Rise • Release • Breathe</p>
       </div>
     </div>
     <nav class="nav">
@@ -27,61 +25,22 @@
   </header>
 
   <section class="hero">
-    <div class="hero-inner container">
+    <div class="hero-wave"></div>
+    <div class="hero-content">
       <h2>Gentle, practical healing to restore your natural flow.</h2>
       <p>Calm sessions that help you release tension, reset your energy, and move forward with clarity.</p>
-      <div class="cta-row">
-        <a class="btn primary" href="#book">Book a Session</a>
-        <a class="btn ghost" href="#about">Learn More</a>
-      </div>
+      <a href="#book" class="btn-primary">Book a Session</a>
+      <a href="#about" class="btn-secondary">Learn More</a>
     </div>
-    <div class="ripples" aria-hidden="true"></div>
   </section>
 
-  <main>
-    <section id="about" class="container section">
-      <h3>About</h3>
-      <p>At Life Force Heal, sessions are calm, grounded, and personalized. We blend energy work and simple coaching tools to help you reduce stress, release what’s heavy, and reconnect with your natural flow. Each session meets you where you are—no jargon, no pressure.</p>
-    </section>
+  <section id="about">
+    <h3>About</h3>
+    <p>At Life Force Heal, sessions are calm, grounded, and personalized. We blend energy work and simple coaching tools to help you reduce stress, release what’s heavy, and reconnect with your natural flow. Each session meets you where you are—no jargon, no pressure.</p>
+  </section>
 
-    <section id="services" class="container section cards">
-      <h3>Services</h3>
-      <div class="card-grid">
-        <article class="card">
-          <h4>Energy Healing · 60 min</h4>
-          <p>Deep relaxation and energetic reset to ease stress and restore balance.</p>
-        </article>
-        <article class="card">
-          <h4>Flow Coaching · 45 min</h4>
-          <p>Practical guidance to move through stuck points with simple, supportive steps.</p>
-        </article>
-        <article class="card">
-          <h4>Integrative Session · 75 min</h4>
-          <p>A gentle blend of energy work + coaching for layered, holistic support.</p>
-        </article>
-      </div>
-    </section>
-
-    <section id="book" class="container section book">
-      <h3>Book a Session</h3>
-      <p>Choose a time that works for you. If you don’t see your ideal slot, <a href="#contact">message us</a> and we’ll try to accommodate.</p>
-      <div class="cta-row">
-        <a class="btn primary" href="mailto:lifeforce-heal@outlook.com?subject=Session%20Request%20-%20Life%20Force%20Heal">Email to Book</a>
-      </div>
-    </section>
-
-    <section id="contact" class="container section">
-      <h3>Contact</h3>
-      <ul class="contact-list">
-        <li>Email: <a href="mailto:lifeforce-heal@outlook.com">lifeforce-heal@outlook.com</a></li>
-        <li>City/Region: <em>Your location</em></li>
-      </ul>
-    </section>
-  </main>
-
-  <footer class="site-footer container">
+  <footer class="footer">
     <p>&copy; 2025 Life Force Heal. All rights reserved.</p>
-    <p class="small">Calm teal/aqua design with circle/ripple motifs.</p>
   </footer>
 </body>
 </html>
