--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Life Force Heal</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>LifeForce-Heal</title>
+  <meta name="description" content="LifeForce-Heal blends energy flow, inquiry, and simple coaching tools to restore your natural balance.">
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="lfh-logo.svg">
 </head>
 <body>
   <header class="header">
     <div class="brand">
-      <img src="lfh-logo.svg" alt="Life Force Heal logo" class="logo" width="64" height="64">
-      <div>
-        <h1>Life Force Heal</h1>
-        <p>Rise • Release • Breathe</p>
+      <img src="lfh-logo.svg" alt="LifeForce-Heal logo" class="logo" width="64" height="64">
+      <div class="brand-text">
+        <h1>LifeForce-Heal</h1>
+        <p class="tag">Energy Flow ~ Inquiry ~ Coaching</p>
       </div>
     </div>
     <nav class="nav">
@@ -24,23 +25,61 @@
     </nav>
   </header>
 
-  <section class="hero">
+  <section class="hero" id="top">
     <div class="hero-wave"></div>
     <div class="hero-content">
       <h2>Gentle, practical healing to restore your natural flow.</h2>
-      <p>Calm sessions that help you release tension, reset your energy, and move forward with clarity.</p>
-      <a href="#book" class="btn-primary">Book a Session</a>
-      <a href="#about" class="btn-secondary">Learn More</a>
+      <p>We blend <strong>energy flow</strong>, <strong>inquiry</strong>, and <strong>simple coaching tools</strong> so you can release tension, reset your energy, and move forward with clarity.</p>
+      <div class="cta">
+        <a href="#book" class="btn primary">Book a Session</a>
+        <a href="#about" class="btn ghost">Learn More</a>
+      </div>
     </div>
   </section>
 
-  <section id="about">
-    <h3>About</h3>
-    <p>At Life Force Heal, sessions are calm, grounded, and personalized. We blend energy work and simple coaching tools to help you reduce stress, release what’s heavy, and reconnect with your natural flow. Each session meets you where you are—no jargon, no pressure.</p>
-  </section>
+  <main>
+    <section id="about" class="section">
+      <h3>About</h3>
+      <p>Sessions are calm, grounded, and personalized. We meet you where you are—no jargon, no pressure—and support gentle change that lasts.</p>
+    </section>
+
+    <section id="services" class="section">
+      <h3>Services</h3>
+      <ul class="cards">
+        <li>
+          <h4>Energy Healing · 60 min</h4>
+          <p>Deep relaxation and energetic reset to restore balance.</p>
+        </li>
+        <li>
+          <h4>Inquiry Session · 45 min</h4>
+          <p>Thoughtful questions to unlock clarity and next steps.</p>
+        </li>
+        <li>
+          <h4>Integrative Coaching · 75 min</h4>
+          <p>Energy + inquiry + simple tools for steady progress.</p>
+        </li>
+      </ul>
+    </section>
+
+    <section id="book" class="section">
+      <h3>Book</h3>
+      <p>Pick a time or email us your availability.</p>
+      <div class="cta">
+        <a class="btn primary" href="mailto:lifeforce-heal@outlook.com?subject=Session%20Request%20(LifeForce-Heal)">Email to Book</a>
+      </div>
+    </section>
+
+    <section id="contact" class="section">
+      <h3>Contact</h3>
+      <ul class="contact">
+        <li>Email: <a href="mailto:lifeforce-heal@outlook.com">lifeforce-heal@outlook.com</a></li>
+      </ul>
+    </section>
+  </main>
 
   <footer class="footer">
-    <p>&copy; 2025 Life Force Heal. All rights reserved.</p>
+    <a href="#top" class="to-top">Back to top ↑</a>
+    <p>&copy; 2025 LifeForce-Heal. All rights reserved.</p>
   </footer>
 </body>
 </html>
