--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </header>
 
   <section class="hero" id="top">
-    <div class="hero-wave"></div>
+    <div class="hero-wave gentle"></div>
     <div class="hero-content">
       <h2>Gentle, practical healing to restore your natural flow.</h2>
       <p>We blend <strong>energy flow</strong>, <strong>inquiry</strong>, and <strong>simple coaching tools</strong> so you can release tension, reset your energy, and move forward with clarity.</p>
@@ -44,7 +44,7 @@
     </section>
 
     <section id="services" class="section">
-      <h3>Services</h3>
+      <h3>Services (examples)</h3>
       <ul class="cards">
         <li>
           <h4>Energy Healing · 60 min</h4>
