--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
       <a href="#services">Services</a>
       <a href="#book">Book</a>
       <a href="#contact">Contact</a>
+      <a href="blog.html">Blog</a>
     </nav>
   </header>
 
   <section class="hero" id="top">
-    <div class="hero-wave gentle"></div>
+    <div class="hero-wave"></div>
     <div class="hero-content">
       <h2>Gentle, practical healing to restore your natural flow.</h2>
       <p>We blend <strong>energy flow</strong>, <strong>inquiry</strong>, and <strong>simple coaching tools</strong> so you can release tension, reset your energy, and move forward with clarity.</p>
@@ -66,6 +67,21 @@
       <p>Pick a time or email us your availability.</p>
       <div class="cta">
         <a class="btn primary" href="mailto:lifeforce-heal@outlook.com?subject=Session%20Request%20(LifeForce-Heal)">Email to Book</a>
+      </div>
+    </section>
+
+    <section id="testimonials" class="section">
+      <h3>Testimonials</h3>
+      <div class="cards">
+        <!-- Duplicate a blockquote.card for each new testimonial -->
+        <blockquote class="card">
+          <p>“I felt calmer and clearer after one session. Gentle but powerful.”</p>
+          <footer>— S.G., San Jose</footer>
+        </blockquote>
+        <blockquote class="card">
+          <p>“The blend of energy work and inquiry helped me get unstuck.”</p>
+          <footer>— K.R., Seattle</footer>
+        </blockquote>
       </div>
     </section>
 
