--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="lfh-logo.svg" alt="LifeForce-Heal logo" class="logo" width="64" height="64">
       <div class="brand-text">
         <h1>LifeForce-Heal</h1>
-        <p class="tag">Energy Flow ~ Inquiry ~ Coaching</p>
+        <p class="tag">Energy Flow ~ Inquiry ~ Coaching ~ Reiki 2nd Level Practitioner</p>
       </div>
     </div>
     <nav class="nav">
@@ -41,7 +41,7 @@
   <main>
     <section id="about" class="section">
       <h3>About</h3>
-      <p>Sessions are calm, grounded, and personalized. We meet you where you are—no jargon, no pressure—and support gentle change that lasts.</p>
+      <p>Sessions are calm, grounded, and personalized. Guided by a certified 2nd Level Practitioner, sessions support gentle change that lasts.</p>
     </section>
 
     <section id="services" class="section">
@@ -73,7 +73,6 @@
     <section id="testimonials" class="section">
       <h3>Testimonials</h3>
       <div class="cards">
-        <!-- Duplicate a blockquote.card for each new testimonial -->
         <blockquote class="card">
           <p>“I felt calmer and clearer after one session. Gentle but powerful.”</p>
           <footer>— S.G., San Jose</footer>
